<resources>
    <string name="app_name">Exercise 1</string>
    <string name="activity_main_input_label_password">Password</string>
    <string name="activity_main_input_label_user">User</string>
    <string name="activity_main_btn_label_login">Log in</string>
    <string name="activity_main_message_error_login">Wrong credentials!</string>
    <string name="activity_main_message_success_login">Welcome back! Last log: %s</string>
    <string name="activity_main_message_empty_user">The user can\'t be empty!</string>
    <string name="activity_main_message_empty_pass">The password can\'t be empty!</string>

    <string name="activity_home_btn_profile">Profile</string>
    <string name="activity_home_btn_list">List</string>
    <string name="activity_home_btn_back">Erase session</string>

    <string name="fragment_profile_message_null_user">Information don\'t received</string>
    <string name="fragment_list_input_label_list">List item</string>
    <string name="fragment_list_btn_label_add">Add</string>

    <string name="fragment_list_message_listidTitle">Description</string>

    <string name="activity_detail_btn_label_back">Back</string>
    <string name="activity_detail_txt_title">List Item Detail</string>
    <string name="fragment_list_delete_title">Delete item</string>
    <string name="fragment_list_delete_message">Would you like to delete this element: %s ?</string>
    <string name="activity_register_input_label_user">user</string>
    <string name="activity_register_input_label_password">password</string>
    <string name="activity_register_btn_label_register">Create new user</string>
    <string name="activity_main_check_label_remember">Remember me</string>
    <string name="activity_main_btn_label_register">Register</string>
    <string name="activity_home_message_counter">Session length %s seconds</string>
    <string name="activity_register_message_existed_user">The user already exists, try another</string>
    <string name="activity_register_message_success_user_created">New user registered :)</string>
    <string name="fragment_profile_message_last_log">Last session: %s</string>

</resources>
