<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/activity_register_input_user"
        android:hint="@string/activity_register_input_label_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/activity_register_input_password"
        android:hint="@string/activity_register_input_label_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/activity_register_btn_register"
        android:text="@string/activity_register_btn_label_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>