<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="modulo4.ddam.markmota.tk.ejercicio1.MainActivity">
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".6"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logoingenieria"
            />
        <EditText
            android:id="@+id/activity_main_input_user"
            android:hint="@string/activity_main_input_label_user"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/activity_main_input_password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:hint="@string/activity_main_input_label_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_marginTop="16dp"
            android:id="@+id/activity_main_check_remember" android:text="@string/activity_main_check_label_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/activity_main_btn_register"
                android:text="@string/activity_main_btn_label_register"
                android:visibility="visible"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_weight="1"
                android:textAllCaps="false" android:text="@string/activity_main_btn_label_login"
                android:id="@+id/activity_main_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".2"/>


</LinearLayout>