<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_margin="16dp"
        android:gravity="right"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/activity_home_session_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/activity_home_btn_back"
            android:layout_weight="1"
            android:id="@+id/activity_home_btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/activity_home_btn_profile"
            android:layout_weight="1"
            android:id="@+id/activity_home_btnFragmentA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/activity_home_btn_list"
            android:layout_weight="1"
            android:id="@+id/activity_home_btnFragmentB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_weight="1"
            android:id="@+id/activity_home_fragmentHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>